--- a/_utilities.scss
+++ b/_utilities.scss
@@ -262,5 +262,18 @@ hamburger
         z-index: 100;
         opacity: 1;
     }
+    @keyframes bounce {
+        0% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.2);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
   }
 // end of back to top button
