--- a/css/style.css
+++ b/css/style.css
@@ -46,111 +46,23 @@
     inset 5px 5px 10px #fff,
     inset -5px -5px 15px #000;
 
-  --contact-shadow: inset 5px 5px 10px #ddda,
-                    inset -5px -5px 10px #000a
-                    ;
+  --contact-shadow: inset 2px 2px 5px #ddda,
+                    inset -2px -2px 5px #000a;
+                    
 
-  --contact-shadow-hover: inset 5px 5px 10px #000a,
-                          inset -5px -5px 10px #ddda
-                          ;
+  --contact-shadow-hover: inset 2px 2px 5px #000a,
+                          inset -2px -2px 5px #ddda;
+                          
 
   --bg-color: hsl(49 37% 94%);
   --typeWriterSpeed: 6s;
   --typeWriterCharacters: 15;
 }
 
-/* cube */
-#footer .scene {
-  position: relative;
-  transform-style: preserve-3d;
-  animation: sceneRotate 10s infinite linear;
-}
 
-@keyframes sceneRotate {
-  to {
-    transform: rotateY(360deg);
-  }
-}
-
-#footer .cube-container {
-  height: 20vh;
-  display: grid;
-  place-items: center;
-  position: relative;
-  font-size: 70px;
-  perspective: 15em;
-  perspective-origin: 50% calc(50% - 6em);
-}
-
-#footer .cube {
-  width: 1em;
-  height: 1em;
-  transform: preserve-3d;
-  position: absolute;
-  bottom: -.5em;
-  left: -.5em;
-
-}
-
-#footer .front,
-.back,
-.left,
-.right {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #c7062056;
-  box-shadow: 0 0 0.5em #000a inset;
-  pointer-events: none;
-}
-
-#footer .cube .front {
-  transform: translateZ(.5em);
-}
-
-#footer .cube .right {
-  transform: rotateY(90deg) translateZ(.5em);
-}
-
-#footer .cube .back {
-  transform: rotateY(180deg) translateZ(.5em);
-}
-
-#footer .cube .left {
-  transform: rotateY(270deg) translateZ(.5em);
-}
-
-#footer .cube .top {
-  position: absolute;
-  width: 1em;
-  height: 1em;
-  background: #c7062056;
-
-  transform: translateY(-50%) rotateX(90deg);
-  box-shadow: 0 0 0.5em #000a inset;
-}
-
-#footer .cube .bottom {
-  position: absolute;
-  width: 1em;
-  height: 1em;
-  bottom: 0;
-  background: #000a;
-
-  transform: translateY(50%) rotateX(90deg);
-  box-shadow: 0 0 0.5em #000;
-}
-
-/* end of cube */
 
 @media screen and (max-width:768px){
-  #thanks {
-    width: 80%;
-  }
-  #thanks h3 {
-    font-size: .7em;
-    padding: .1em;
-  }
+  
 }
 #footer .footer-brand h2 {
   font-size: 1em;
@@ -161,25 +73,6 @@
 
 /*back to top button*/
 
-
-
-.show-link {
-  
-}
-
-@keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.2);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
 
 /*end of back to top button*/
 
