--- a/style2.scss
+++ b/style2.scss
@@ -1700,8 +1700,14 @@ body {
 
 
 // thank you page
+.thanks-brand {
+    h2 {
+        padding: .2em;
+        font-size: 1em !important;
+        text-align: center;
+    }
+}
 #thanks {
-    border: none;
     padding: .5em 1em;
     font-size: 1.5em;
     background-color: #29323c;
