--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;500;700&family=Philosopher:wght@400;700&family=Shippori+Mincho:wght@700&family=Source+Code+Pro:wght@200;300;400&family=Ubuntu:wght@300;400&display=swap');
 @import 'variables';
 @import 'utilities';
-@import 'home';
 @import 'skills';
 @import 'contact';
 @import 'footer';
@@ -277,12 +276,18 @@ body {
                 width: fit-content;
                 color: #eee;
                 font-family: 'Philosopher', sans-serif;
+                // desktop font size
+                @media (min-width: 768px){
+                    font-size: 2em;
+                }
+                // end of desktop font size
 
                 span {
                     display: inline-block;
                     color: #fff;
                     text-align: left;
                     font-size: 1.5em;
+                    
                     text-shadow: 0 0 5px #000, 0 0 10px #dc143c;
                     line-height: 1.3;
                     animation: hero-span 6s ease-in-out;
@@ -335,6 +340,9 @@ body {
         // welcome section button & shadow
         #cta-header {
             font-size: 1.3em;
+            @media (min-width: 768px){
+                font-size: 1.5em;
+            }
             position: relative;
             display: inline-block;
             text-align: center;
@@ -474,9 +482,17 @@ body {
                 flex-direction: column-reverse;
                 width: 90%;
                 // project items on desktop : row
-                @media (min-width: 768px){
-                        flex-direction: row;
-                        margin: .5em auto;
+                @media (min-width: 768px) {
+                    height: 400px;
+                    margin: .5em;
+                    width: 90%;
+                    border-radius: 5px;
+                    flex-direction: row;
+                    margin: .5em auto;
+
+                    &:nth-child(even) {
+                        flex-direction: row-reverse;
+                    }
                 }
                 // end of project items on desktop : row
                 margin: 20px auto;
@@ -488,7 +504,15 @@ body {
                 
                 // project tile
                 .project-tile {
-                    
+                    @media (min-width: 768px){
+                        flex-basis: 50%;
+                        // desktop project tile box shadow
+                        box-shadow: inset 5px 0px 5px rgba(150, 149, 149, 0.667),
+                                    inset 0px -5px 5px #000a;
+                        // end of desktop project tile box shadow
+                        
+                    }
+
                     padding: 30px;
                     flex-basis: 50%;
                     width: 100%;
@@ -507,6 +531,9 @@ body {
                     // project Title (h1)
                     h1 {
                         font-size: 1.5em;
+                        @media (min-width: 768px){
+                            font-size: 2em;
+                        }
                         font-weight: 900;
                         line-height: 1em;
                         letter-spacing: .05em;
@@ -583,9 +610,9 @@ body {
                         // end of links icon
                         // link hover state
                         &:hover {
-                             h2 {
-                                 color: yellow;
-                                }
+                            h2 {
+                                color: yellow;
+                            }
                         }
                         // link hover state
 
@@ -630,6 +657,19 @@ body {
                     &:hover {
                         transition: 0.5s ease;
 
+                    }
+                    @media (min-width: 768px){
+                        height: 100%;
+                        box-shadow: inset 0px 5px 5px #969595aa,
+                                    inset -3px -5px 5px #000;
+                        border-radius: 0;
+                        border-top-left-radius: 0;
+                        border-bottom-left-radius: 0;
+                        &::after {
+                            box-shadow: 0 0 5px #000a,
+                                        inset -1px 5px 5px #969595aa,
+                                        inset -5px -5px 5px #000;
+                        }
                     }
                 }
                 // end of project image
@@ -677,6 +717,11 @@ body {
 .about {
     // about container
     flex-direction: column-reverse;
+    // big screen layout
+    @media (min-width: 768px){
+        flex-direction: row;
+    }
+    // end of big screen layout
     text-align: center;
     margin: 0 auto;
     padding: 50px 10px 100px 10px;
@@ -704,6 +749,9 @@ body {
     .col-right {
         // section title
         .section-title {
+            text-align: center;
+            font-size: 3em;
+            padding-bottom: 10px;
             &::after {
                 width: 80%;
                 margin: 0 auto;
@@ -864,8 +912,8 @@ body {
                     // link hover state
                     &:hover {
                         transition: .3s ease;
-  transform: scale(1.1);
-  opacity: .8;
+                        transform: scale(1.1);
+                        opacity: .8;
                     }
                     // end of link hover state
                 }
@@ -881,6 +929,9 @@ body {
                 padding-left: 4px;
                 z-index: 13;
                 font-size: .8em;
+                @media (min-width:768px){
+                    font-size: 1em;
+                }
                 .fcc-link {
                     color: #dc143c;
                     &:hover {
@@ -907,6 +958,14 @@ body {
     .col-left {
         width: 100%;
         height: 360px;
+        @media (min-width: 768px){
+            width: 600px;
+            height: 400px;
+        }
+        @media (min-width: 1024px) {
+            width: 600px;
+            height: 550px;
+        }
         display: flex;
         justify-content: center;
         align-items: center;
